# BGK-516

BGK-516_HW/question1/: CMakeLists.txt  main.c
BGK-516_HW/question2/: CMakeLists.txt  main.c
BGK_516_HW2/: HW2.docx
BGK_516_HW2/question1/: main.c
BGK_516_HW2/question2/: CMakeLists.txt  main.c
BGK_516_HW3/question1/: main.c
BGK_516_HW4/question3/: CMakeLists.txt  main.c
